--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <tr>
       <td><img src="images/nataliaPng.png" alt="Natalia profile picture"></td>
       <td>
-        <h1>Natalia Janus 13</h1>
+        <h1>Natalia Janus</h1>
         <p><em><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/learn/lecture/12287450#questions" target="_blank">Udemy</a> Student</em></p>
         <p>My name is Natalia Janus and I am using Udemy <br>to learn how to code. I am currently learning HTML.</p>
       </td>
