Please make these links open in a new tab

--- a/hobbies.html
+++ b/hobbies.html
@@ -9,8 +9,8 @@
     <ol>
       <li>Ceramics</li>
       <li>Painting</li>
-      <li>Watching <a href="https://animekisa.tv/">anime</a></li>
-      <li><a href="images/squish.jpeg">Squishmallows</a></li>
+      <li>Watching <a href="https://animekisa.tv/" target="_blank">anime</a></li>
+      <li><a href="images/squish.jpeg" target="_blank">Squishmallows</a></li>
     </ol>
   </body>
 </html>
