added styling for dotted lines.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
 <head>
   <meta charset="utf-8">
   <title>Natalia's Personal Site</title>
+
+<style>
+  body {
+    background-color: #FCD1D1;
+  }
+  hr {
+
+    border-style:none;
+    border-top-style: dotted;
+    border-color: white;
+    border-width: 5px;
+    height: 0px;
+    width: 5%;
+  }
+  img {
+    height: 150px;
+  }
+</style>
+
 </head>
 
 <body>
